# DTL_AI_PCB_Optimization

./: README.md  app.py  requirements.txt  test_ml.py
github_upload_pcb_sustainability/: app.py  pyproject.toml
github_upload_pcb_sustainability/samples/: ml_training_components.csv  sample_bom.csv  sample_placement.csv
github_upload_pcb_sustainability/samples/demo_gerbers/: drill.drl
github_upload_pcb_sustainability/src/pcb_sustainability/: export.py  gerber.py  ingestion.py  models.py  recommendations.py  recycling.py  robu.py  scoring.py  utils.py
github_upload_pcb_sustainability/src/pcb_sustainability/data/: robu_seed_products.json
github_upload_pcb_sustainability/tests/: test_gerber_recycling.py  test_robu.py  test_scoring.py
robu_lookup_update_only/: robu.py
samples/demo_gerbers/: board_outline.gko  bottom_copper.gbl  top_copper.gtl
src/pcb_sustainability/: __init__.py  ingestion.py  ml.py  robu.py  scoring.py
tests/: test_ingestion.py  test_robu.py
