[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pcb-sustainability-prototype"
version = "0.1.0"
description = "AI-assisted sustainable PCB and electronics design optimization prototype."
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12",
    "fpdf2>=2.7",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "plotly>=5.20",
    "pytest>=8.0",
    "requests>=2.31",
    "streamlit>=1.32",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
